--- a/www/css/style.css
+++ b/www/css/style.css
@@ -711,9 +711,14 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.login .legales{ width: 100%; margin-top: 5% auto; text-align: center; bottom: 32px;}
 	.profile.withraw{}
 	.profile.withraw p>strong{ color: #90bd7e; font-weight: 300;}
-	.profile .tab_profile{ min-height: 62vh; width: 100%; background: #000; padding: 5px; }
+	.profile .tab_profile{ min-height: 62vh; width: 100%; background: #000; padding: 1.5rem 0.5rem; }
 	
-	/* User documents */
-	.tab_profile.documents>ul{list-style: none; padding: 0; margin: 0;}
-	.tab_profile.documents>ul>li{padding: 0.5rem; font-weight: 300;}
-
+	/* User documents and transactions */
+	
+	.tab_profile.documents>ul,
+	.tab_profile.transactions>ul{list-style: none; padding: 0; margin: 0;}
+	.tab_profile.documents>ul>li,
+	.tab_profile.transactions>ul>li{padding: 0.5rem; font-weight: 300;}
+	.tab_profile.documents>ul>li:nth-of-type(2n),
+	.tab_profile.transactions>ul>li:nth-of-type(2n){background-color: #3c3a3a;}
+	.tab_profile li .highlight{color: #2196F3;}
