--- a/www/views/profile-history.hbs
+++ b/www/views/profile-history.hbs
@@ -16,7 +16,10 @@
 				<ul>
 					{{# data.transactions}}
 						<li class="clearfix">
-							<span>{{id}}</span> <span>{{concept}}</span> <span>{{formatCurrency amount}}</span> <span>{{ formatDate created}} </span>					
+							<span style="width: 12%; display: inline-block;" class="highlight">{{id}}</span> 
+							<span style="width: 51%; display: inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{{concept}}</span> 
+							<span style="width: 15%; display: inline-block;" class="highlight">{{formatCurrency amount}}</span> 
+							<span style="width: 20%; display: inline-block;">{{ formatDate created 'L'}} </span>					
 						</li>
 					{{/ data.transactions}}
 					{{^ data.transactions}}
