--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -3,32 +3,32 @@
 			<div class="filtros_moneda clearfix">
 				<h3>MONEDA</h3>
 				<ul class="clearfix">
-					<li data="todos_moneda" onclick="$('#realMoneyFilters, #pickcoinFilters').hide(); " class="selected"><h3>TODOS</h3></li>
+					<li data="todos_moneda" onclick="$('#realMoneyFilters, #pickcoinFilters').hide(); app.clear_filters('money');" class="selected"><h3>TODOS</h3></li>
 					<li onclick="$('#realMoneyFilters').show(); $('#pickcoinFilters').hide(); "  data="money_moneda"><img src="{{cordova_full_path}}images/billete.png"></li>
 					<li onclick="$('#realMoneyFilters').hide(); $('#pickcoinFilters').show(); " data="pickcoin_moneda"><img src="{{cordova_full_path}}images/pickcoin.png"></li>
 				</ul>
 				<ul id="realMoneyFilters" class="clearfix" style="display: none;">
-					<li data-filter="real_money" data-value="min"><img src="{{cordova_full_path}}images/billete.png"></li>
-					<li data-filter="real_money" data-value="med"><img src="{{cordova_full_path}}images/bill2.png"></li>
-					<li data-filter="real_money" data-value="max"><img src="{{cordova_full_path}}images/bill3.png"></li>
+					<li data-filter="real_money" onclick="app.filter_pool('real_money', 'min');" ><img src="{{cordova_full_path}}images/billete.png"></li>
+					<li data-filter="real_money" onclick="app.filter_pool('real_money', 'med');"><img src="{{cordova_full_path}}images/bill2.png"></li>
+					<li data-filter="real_money" onclick="app.filter_pool('real_money', 'max');"><img src="{{cordova_full_path}}images/bill3.png"></li>
 				</ul>
 				<ul id="pickcoinFilters" class="clearfix" style="display: none;">
-					<li data-filter="fake_money" data-value="min"><img src="{{cordova_full_path}}images/pickcoin.png"></li>
-					<li data-filter="fake_money" data-value="med"><img src="{{cordova_full_path}}images/pic2.png"></li>
-					<li data-filter="fake_money" data-value="max"><img src="{{cordova_full_path}}images/pic3.png"></li>
+					<li onclick="app.filter_pool('fake_money', 'min');" ><img src="{{cordova_full_path}}images/pickcoin.png"></li>
+					<li onclick="app.filter_pool('fake_money', 'med');" ><img src="{{cordova_full_path}}images/pic2.png"></li>
+					<li onclick="app.filter_pool('fake_money', 'max');" ><img src="{{cordova_full_path}}images/pic3.png"></li>
 				</ul>
 			</div><!-- filtros_moneda -->
 			<div class="filtros_deporte clearfix">
 				<h3>DEPORTE</h3>
 				<ul class="clearfix">
-					<li onclick="$('#deporte_soccer').hide();"  data="todos_deporte" class="selected"><h3>TODOS</h3></li>
+					<li onclick="$('#deporte_soccer').hide(); app.clear_filters('sport');" class="selected"><h3>TODOS</h3></li>
 					<li onclick="$('#deporte_soccer').show();" data="deporte_soccer"><img src="{{cordova_full_path}}images/icon-football.png"></li>
 					<li onclick="$('#deporte_soccer').hide();"  data="deporte_basket"><img src="{{cordova_full_path}}images/ion-ios-basketball-outline.png"></li>
 					<li  onclick="$('#deporte_soccer').hide();" data="deporte_baseball"><img src="{{cordova_full_path}}images/icon-baseball.png"></li>
 					<li onclick="$('#deporte_soccer').hide();"  data="deporte_nfl"><img src="{{cordova_full_path}}images/icon-nfl.png"></li>
 				</ul>
 				<ul class="clearfix" id="deporte_soccer" style="display: none;">
-					<li data="soccer_todas"><span>Todas</span></li>
+					<li onclick=" app.clear_filters('sport_league');" data="soccer_todas"><span>Todas</span></li>
 					<li data="soccer_ligamx"><span>Liga MX</span></li>
 					<li data="soccer_copamx"><span>Copa MX</span></li>
 					<li data="soccer_laliga"><span>La Liga</span></li>
@@ -39,16 +39,16 @@
 			<div class="filtros_tipo clearfix">
 				<h3>TIPO</h3>
 				<ul class="clearfix">
-					<li data="tipo_abiertas" class="selected"><h3>Abiertas</h3></li>
-					<li data="tipo_limitadas"><h3>Cupo limitado</h3></li>
+					<li onclick="app.filter_pool('type', 'open');" data="tipo_abiertas" class="selected"><h3>Abiertas</h3></li>
+					<li onclick="app.filter_pool('type', 'limited');" data="tipo_limitadas"><h3>Cupo limitado</h3></li>
 				</ul>
 			</div><!-- filtros_deporte -->
 			<div class="filtros_estado clearfix">
 				<h3>ESTADO</h3>
 				<ul class="clearfix">
-					<li data="estado_procimas" class="selected"><h3>Próximas</h3></li>
-					<li data="estado_live"><h3>En curso</h3></li>
-					<li data="estado_finalizadas"><h3>Finalizadas</h3></li>
+					<li onclick="app.filter_pool('status', 'upcoming');" data="estado_procimas" class="selected"><h3>Próximas</h3></li>
+					<li onclick="app.filter_pool('status', 'live');" data="estado_live"><h3>En curso</h3></li>
+					<li onclick="app.filter_pool('status', 'closed');" data="estado_finalizadas"><h3>Finalizadas</h3></li>
 				</ul>
 			</div><!-- filtros_deporte -->
 		</div><!-- filtros overlay -->
