--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -8,14 +8,14 @@
 					<li onclick="$('#realMoneyFilters').hide(); $('#pickcoinFilters').show(); " data="pickcoin_moneda"><img src="{{cordova_full_path}}images/pickcoin.png"></li>
 				</ul>
 				<ul id="realMoneyFilters" class="clearfix" style="display: none;">
-					<li data-filter="real_money" onclick="app.filter_pool('real_money', 'min');" ><img src="{{cordova_full_path}}images/billete.png"></li>
-					<li data-filter="real_money" onclick="app.filter_pool('real_money', 'med');"><img src="{{cordova_full_path}}images/bill2.png"></li>
-					<li data-filter="real_money" onclick="app.filter_pool('real_money', 'max');"><img src="{{cordova_full_path}}images/bill3.png"></li>
+					<li data-filter="real_money" onclick="app.stack_filter('real_money', 'min');" ><img src="{{cordova_full_path}}images/billete.png"></li>
+					<li data-filter="real_money" onclick="app.stack_filter('real_money', 'med');"><img src="{{cordova_full_path}}images/bill2.png"></li>
+					<li data-filter="real_money" onclick="app.stack_filter('real_money', 'max');"><img src="{{cordova_full_path}}images/bill3.png"></li>
 				</ul>
 				<ul id="pickcoinFilters" class="clearfix" style="display: none;">
-					<li onclick="app.filter_pool('fake_money', 'min');" ><img src="{{cordova_full_path}}images/pickcoin.png"></li>
-					<li onclick="app.filter_pool('fake_money', 'med');" ><img src="{{cordova_full_path}}images/pic2.png"></li>
-					<li onclick="app.filter_pool('fake_money', 'max');" ><img src="{{cordova_full_path}}images/pic3.png"></li>
+					<li onclick="app.stack_filter('fake_money', 'min');" ><img src="{{cordova_full_path}}images/pickcoin.png"></li>
+					<li onclick="app.stack_filter('fake_money', 'med');" ><img src="{{cordova_full_path}}images/pic2.png"></li>
+					<li onclick="app.stack_filter('fake_money', 'max');" ><img src="{{cordova_full_path}}images/pic3.png"></li>
 				</ul>
 			</div><!-- filtros_moneda -->
 			<div class="filtros_deporte clearfix">
@@ -39,16 +39,16 @@
 			<div class="filtros_tipo clearfix">
 				<h3>TIPO</h3>
 				<ul class="clearfix">
-					<li onclick="app.filter_pool('type', 'open');" data="tipo_abiertas" class="selected"><h3>Abiertas</h3></li>
-					<li onclick="app.filter_pool('type', 'limited');" data="tipo_limitadas"><h3>Cupo limitado</h3></li>
+					<li onclick="app.stack_filter('type', 'open');" data="tipo_abiertas" class="selected"><h3>Abiertas</h3></li>
+					<li onclick="app.stack_filter('type', 'limited');" data="tipo_limitadas"><h3>Cupo limitado</h3></li>
 				</ul>
 			</div><!-- filtros_deporte -->
 			<div class="filtros_estado clearfix">
 				<h3>ESTADO</h3>
 				<ul class="clearfix">
-					<li onclick="app.filter_pool('status', 'upcoming');" data="estado_procimas" class="selected"><h3>Próximas</h3></li>
-					<li onclick="app.filter_pool('status', 'live');" data="estado_live"><h3>En curso</h3></li>
-					<li onclick="app.filter_pool('status', 'closed');" data="estado_finalizadas"><h3>Finalizadas</h3></li>
+					<li onclick="app.stack_filter('status', 'upcoming');" data="estado_procimas" class="selected"><h3>Próximas</h3></li>
+					<li onclick="app.stack_filter('status', 'live');" data="estado_live"><h3>En curso</h3></li>
+					<li onclick="app.stack_filter('status', 'closed');" data="estado_finalizadas"><h3>Finalizadas</h3></li>
 				</ul>
 			</div><!-- filtros_deporte -->
 		</div><!-- filtros overlay -->
