--- a/www/views/partials/my-lobby.hbs
+++ b/www/views/partials/my-lobby.hbs
@@ -1,10 +1,10 @@
 	{{# data.entries}}
-		{{> each-quiniela}}
+		{{> each-my-quiniela}}
 	{{/ data.entries}}
 
 	{{# if data.mypools}}
 		{{# data.mypools}}
-			{{> each-quiniela}}
+			{{> each-my-quiniela}}
 		{{/ data.mypools}}
 	{{/ if}}
 	
