--- a/www/css/style.css
+++ b/www/css/style.css
@@ -195,8 +195,9 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*quiniela open*/
 
-.quiniela.quiniela_open .quiniela_content .quiniela_info {width: 43%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_info {width: 30%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_entrada {width: 25%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_picks_ok {width: 15%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 25%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa span.number {float: left; margin-left: 5px; color: #77BC1F;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa img {margin-top: -2px;}
@@ -235,9 +236,9 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .filtros .filtros_estado {width: 100%;}
 .filtros .filtros_estado ul li {width: 33.3%} 
 
-.filtros #deporte_soccer {width: 100%;}
-.filtros #deporte_soccer li {width: 16.6%; text-align: center;}
-.filtros #deporte_soccer li span {font-size: 10px; display: block; padding-top: 3px;}
+.filtros #deporte_soccer { width: 100%; }
+.filtros #deporte_soccer li { text-align: center; }
+.filtros #deporte_soccer li span { font-size: 10px; display: block; padding: 3px 6px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
 
 /*** MIS QUINIELAS OVERLAY ***/
@@ -249,7 +250,6 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_live {border-left: 3px solid #F6A623;}
 .quiniela_closed {border-left: 3px solid #FF576C;}
 .quiniela_otra {border-left: 3px solid #4A90E2;}
-
 
 /*** QUINIELA SINGLE ***/
 
@@ -590,10 +590,10 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .abonar form .fecha_vencimiento input[type="text"] {width: 30%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
 
 .abonar .botones_abono {width: 100%; background: #000; padding: 10px 0; margin-bottom: 10px; break-before: 3px;}
-.abonar .botones_abono a {display: table-cell; width: 1%; color: #fff; text-decoration: none;  text-align: center; padding: 5px 0; border-right: 1px solid #8A8A8D; margin-right: 2px;}
-.abonar .botones_abono a.selected {background: #598D16;}
-.abonar .botones_abono a:last-child {border-right: 0px;}
-.abonar .botones_abono a img {width: 24px;  margin-right: 5px; vertical-align: middle; }
+.abonar .botones_abono li {display: table-cell; width: 1%; color: #fff; text-decoration: none;  text-align: center; padding: 5px 0; border-right: 1px solid #8A8A8D; margin-right: 2px;}
+.abonar .botones_abono li.selected {background: #598D16;}
+.abonar .botones_abono li:last-child {border-right: 0px;}
+.abonar .botones_abono li img {width: 24px;  margin-right: 5px; vertical-align: middle; }
 
 .abonar ul.formas_pago {list-style: none; margin: 0 0 30px 0; padding: 0 0 0 15%;}
 .abonar ul.formas_pago li {float: left; margin-right: 10px;}
