--- a/www/views/deposit.hbs
+++ b/www/views/deposit.hbs
@@ -5,39 +5,50 @@
 			<a class="selected" >Tarjeta de crédito</a>
 			<a class="hook" data-resource="deposit-stores" href="deposit-stores.html">Tienda de conveniencia</a>
 		</div>
-		<div class="botones_abono clearfix">
-			<a class="" href=""><img src="images/billete.png">$25</a>
-			<a class="" href=""><img src="images/billete.png">$50</a>
-			<a class="selected" href=""><img src="images/billete.png">$100</a>
-			<a class="" href=""><img src="images/billete.png">$200</a>
-			<a class="" href="">Otra cantidad</a>
-		</div>
-		<div class="abonar_form clearfix">
-			
-			<form>
-				<ul class="formas_pago clearfix">
-					<li><img src="images/openpay.png"></li>
-					<li><img src="images/securetrans.png"></li>
-					<li><img src="images/mastercard.png"></li>
-					<li><img src="images/visa.png"></li>
-					<li><img src="images/amex.png"></li>
-				</ul>
-				<input type="text" placeholder="Nombre como aparece en la tarjeta">
-				<input type="text" placeholder="Número de tarjeta">
-				<div class="fecha_vencimiento clearfix">
-					<select>
-						<option>Mes</option>
-					</select>
-					<select>
-						<option>Año</option>
-					</select>
-					<input type="text" placeholder="CVV">
-				</div>
-				<div class="submit_holder">
-					<input type="submit" value="send">
-				</div>
-			</form>
-		</div>
+		<form id="depositCardForm" method="POST" action="">
+			<ul class="botones_abono clearfix">
+				<li data-amount="1"><img src="images/billete.png">$25</a>
+				<li data-amount="2"><img src="images/billete.png">$50</a>
+				<li class="selected" data-amount="3"><img src="images/billete.png">$100</a>
+				<li data-amount="4"><img src="images/billete.png">$200</a>
+				<li data-amount="0">Otra cantidad</a>
+			</ul>
+			<div class="abonar_form clearfix">
+					<input id="populate_value" type="hidden" name="amount" value="3">
+					<ul class="formas_pago clearfix">
+						<li><img src="images/openpay.png"></li>
+						<li><img src="images/securetrans.png"></li>
+						<li><img src="images/mastercard.png"></li>
+						<li><img src="images/visa.png"></li>
+						<li><img src="images/amex.png"></li>
+					</ul>
+					<ul>
+						{{# data.cards}}	
+							<li class="clearfix">
+								<input type="radio" id="{{brand}}{{id}}" name="tarjeta">
+								<div class="check"></div>	
+								<label for="{{brand}}{{id}}" >
+									<img src="{{cordova_full_path}}images/{{brand}}.png">
+									<span class="terminacion">{{bank_name}} ************ {{card_number}}</span>
+									<span class="expires">{{expiration_month}}/{{expiration_year}}</span>
+								</label>
+								<div class="edit_tarjeta">
+									<a data-id="{{id}}"  data-digits="{{card_number}}" class="delete_card"><img src="{{cordova_full_path}}images/eliminar.png"></a>
+								</div>							
+							</li>
+						{{/ data.cards}}
+
+						{{^ data.cards}}
+							<li class="clearfix">
+								<p>No tienes ningún método de pago registrado.</p>					
+							</li>
+						{{/ data.cards}}
+					</ul>
+					<div class="submit_holder">
+						<input type="submit" value="send">
+					</div>
+			</div>
+		</form>
 		<p class="legales">Los cargos a tu tarjeta de crédito serán realizados a tráves de OpenPay.</p>
 
 		<p class="legales">Te recordamos que una vez depositado, tendrás que haber jugado al menos<br /> el 80% de lo que hayas depositado para poder solicitar retiros de fondos.</p>
