--- a/www/views/deposit-stores.hbs
+++ b/www/views/deposit-stores.hbs
@@ -29,8 +29,7 @@
 					2. Realiza el PAGO en la tienda de tu elección.<br/>
 					3. ¡A JUGAR!<br/><br/>
 
-					NOTA: Las tiendas cobran una comisión<br/>
-					de $8.00 al cliente que acude a pagar.
+					NOTA: Las tiendas cobran una comisión de $8.00 al cliente que acude a pagar.
 				</p>
 				{{!-- <input type="text" placeholder="Número de celular a 10 dígitos"> --}}
 				<div class="submit_holder">
@@ -38,7 +37,7 @@
 				</div>
 			</form>
 		</div>
-		<p class="legales">Consulta aquí tu tienda mas cercana <br/><br/>
+		<p class="legales">Consulta aquí tu tienda mas cercana: <br/>
 			Farmacias Benavides, Farmacias del Ahorro, Super One, El Asturiano,
 			El Vigilante, Farmacias La Original, Grupo Águila, A La Mano, Maxilana, Prendamex, Extra, Tiendas Mambo, El Gallo de la Laguna, Caja Solidaria Tamaulipas, Súper Prestamos Premier, Grupo Blyska, Peso Fácil,
 			GWV Inversiones, DNU, Financiera Forjadores, Venayuda, Grupo Pawn, Caja Cerro de la Silla, Paso Seguro, Servicio Prendarios del Sureste,
